--- a/styles.css
+++ b/styles.css
@@ -281,6 +281,6 @@ color: #fff;
     font-size: 16px;
     line-height: 20px;
     letter-spacing: -0.019em;
-    color: #676464;
+    color: #fff;
     padding: 2px;
 }
