--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,14 @@
 
 body{
     overflow-x: hidden;
+    min-height: 100vh;
+   
 
 }
 
-main{
+main{width: 100%;
+    height: 100vh;
+    position: relative;
    
 }
 
@@ -187,7 +191,7 @@ main{
     font-size: 48px;
     line-height: 32px;
     letter-spacing: -0.019em;
-    color: #676464;
+    color: #455559;
     text-align: center;
     padding: 5px;
 }
@@ -307,4 +311,252 @@ color: #fff;
     letter-spacing: -0.019em;
     color: #fff;
     padding: 2px;
+}
+
+/* ||SERVICES WE PROVIDE*/
+aside h1{
+position: absolute;
+width: 50%;
+height: 54px;
+left: 590px;
+top: 1200px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 48px;
+line-height: 32px;
+/* or 67% */
+letter-spacing: -0.019em;
+color: #676464;
+margin: 0 auto;
+}
+ /* Screen Repair */
+.item_1{
+position: absolute;
+width: 347px;
+height: 73px;
+left: 491px;
+top: 1331px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 24px;
+color: #000000;
+}
+ /* Baterry Replacement */
+.item_2{
+   position: absolute;
+width: 347px;
+height: 73px;
+left: 931px;
+top: 1331px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 24px;
+color: #000000;
+}
+/* Camera replacement */
+.item_3{
+position: absolute;
+width: 347px;
+height: 73px;
+left: 491px;
+top: 1404px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 24px;
+color: #000000;
+}
+ /* Water damaged */
+
+.item_4{
+position: absolute;
+width: 347px;
+height: 73px;
+left: 931px;
+top: 1404px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 24px;
+color: #000000;
+}
+ /* Wifi/Bluetooh */
+.item_5{
+position: absolute;
+width: 347px;
+height: 73px;
+left: 491px;
+top: 1477px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 24px;
+color: #000000;
+}
+ /* Home Botton */
+
+.item_6{
+position: absolute;
+width: 347px;
+height: 73px;
+left: 931px;
+top: 1477px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 24px;
+color: #000000;
+
+}
+/* Charging ports */
+.item_7{
+position: absolute;
+width: 347px;
+height: 73px;
+left: 491px;
+top: 1550px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 24px;
+color: #000000;
+}
+   /* Side bottons */
+.item_8{
+position: absolute;
+width: 347px;
+height: 73px;
+left: 931px;
+top: 1550px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 24px;
+color: #000000;
+}
+
+.item_1,
+.item_2,
+.item_3,
+.item_4,
+.item_5,
+.item_6,
+.item_7,
+.item_8{
+    text-transform: capitalize;
+}
+
+/* ||section 3 / standards*/
+
+.standards{
+    width: 50%;
+    height: 100vh;
+}
+  /* home icon */
+.standards_home-icon{
+ position: relative;
+width: 6rem;
+height: 100px;
+left: 107px;
+top: 1631px;
+}
+
+/* Trusted by 2M+ Households */
+.standards_paragraph1{
+position: absolute;
+width: 217px;
+height: 94px;
+left: 230px;
+top: 1668px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 24px;
+color: #000000;
+}
+
+  /* phone icon */
+.standards_phone_icon{
+position: relative;
+width: 82px;
+height: 101px;
+left: 462px;
+top: 1645px;
+}
+
+/* 5 Star Technician Rating */
+.standards_paragraph2{
+    position: absolute;
+width: 212px;
+height: 100px;
+left: 660px;
+top: 1669px;
+
+font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 24px;
+
+color: #000000;
+}
+
+/* check icon */
+.standards_check-icon{
+position: relative;
+width: 71px;
+height: 111px;
+left: 784px;
+top: 1634px;
+}
+
+  /* Background Checked Technicians */
+  .standards_paragraph3{
+  position: absolute;
+width: 225px;
+height: 115px;
+left: 1080px;
+top: 1672px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 24px;
+color: #000000;
+}
+
+/* shield icon */
+.standards_shield-icon{
+position: relative;
+width: 105px;
+height: 115px;
+left: 1128px;
+top: 1640px;
+}
+
+/* 90 Day Service Guaranteed */
+.standards_paragraph4{
+    position: absolute;
+    width: 225px;
+    height: 108px;
+    left: 1520px;
+    top: 1661px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+    color: #000000;
 }
