--- a/styles.css
+++ b/styles.css
@@ -7,19 +7,25 @@
 
 body{
     overflow-x: hidden;
-    min-height: 100vh;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+
    
 
 }
 
-main{width: 100%;
+main{
+    width: 100%;
     height: 100vh;
     position: relative;
    
 }
 
 /* NAV BAR */
-.nav_background{
+.nav_background{    
     
     position: fixed;
     width: 100%;
@@ -71,6 +77,8 @@ main{width: 100%;
     cursor: pointer;
     transform:translate(-2px,-2px);
 }
+
+
 
 .nav_login{
     float: right;
@@ -144,10 +152,7 @@ main{width: 100%;
     width: 20%;
     height: 67px;
     left: 685px;
-    top: 400px;
-    background: rgba(5, 29, 242, 0.92);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;
+    top: 375px;
 }
 
 .header_botton:hover{
@@ -171,15 +176,34 @@ main{width: 100%;
 .botton_item{
     cursor: pointer;
     text-decoration: none;
-    color: #FFF;
+    background-image: linear-gradient(to right, #314755 0%, #26a0da  51%, #314755  100%);
+    margin: 10px;
+    padding: 15px 45px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;            
+    box-shadow: 0 0 20px #eee;
+    border-radius: 10px;
+    display: block;
 }
 
 .botton_item:hover{
-    color: rgb(130, 130, 249);
+    background-position: right center; /* change the direction of the change here */
+        color: #fff;
+        text-decoration: none;
+            
+   
+     
     
 }
 
 /*SEECTION 1 */
+
+.section_1{
+
+}
 
 .contaner1_title{
     position: absolute;
@@ -189,20 +213,22 @@ main{width: 100%;
     top: 620px;
     font-family: 'Inter';
     font-style: normal;
-    font-weight: 700;
-    font-size: 48px;
+    font-weight: 500;
+    font-size: 35px;
     line-height: 32px;
     letter-spacing: -0.019em;
-    color: #455559;
+    color: black;
     text-align: center;
     padding: 5px;
+    text-transform:uppercase ; 
+    font-weight: 700;
 }
 
 .container1_item1{
-    position: absolute;
+position: absolute;
 width: 25%;
 height: 57px;
-left: 10%;
+left: 8%;
 top: 725px;
 padding: 5px;
 max-resolution: 5px;
@@ -259,7 +285,7 @@ max-resolution: 5px;
     top: 900px;
     background: #cdcece;
     border-radius: 50px;
-    
+    background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
 }
 
 .contaner2_title{
@@ -273,7 +299,7 @@ font-style: normal;
 font-weight: 700;
 font-size: 64px;
 line-height: 50px;
-color:#676464;;
+color:black;;
 text-align: center;
 }
 
@@ -316,12 +342,15 @@ color: #fff;
 }
 
 /* ||SERVICES WE PROVIDE*/
+
+
 aside h1{
+    margin: 0 auto;
 position: absolute;
 width: 50%;
 height: 54px;
-left: 590px;
-top: 1200px;
+left: 665px;
+top: 1250px;
 font-family: 'Inter';
 font-style: normal;
 font-weight: 700;
@@ -329,15 +358,30 @@ font-size: 48px;
 line-height: 32px;
 /* or 67% */
 letter-spacing: -0.019em;
-color: #676464;
+color: black;
+font-weight: 700;
+text-transform: uppercase;
 margin: 0 auto;
+}
+
+aside div{
+    max-width: 800px;
+    padding: 1rem;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(2,200px);
+    grid-template-rows: repeat(3,200px);
+    grid-gap: 1rem;
+    margin: 0 auto;
+   
+    
 }
  /* Screen Repair */
 .item_1{
 position: absolute;
 width: 347px;
 height: 73px;
-left: 491px;
+left: 675px;
 top: 1331px;
 font-family: 'Inter';
 font-style: normal;
@@ -351,7 +395,7 @@ color: #000000;
    position: absolute;
 width: 347px;
 height: 73px;
-left: 931px;
+left: 1000px;
 top: 1331px;
 font-family: 'Inter';
 font-style: normal;
@@ -365,7 +409,7 @@ color: #000000;
 position: absolute;
 width: 347px;
 height: 73px;
-left: 491px;
+left: 675px;
 top: 1404px;
 font-family: 'Inter';
 font-style: normal;
@@ -380,7 +424,7 @@ color: #000000;
 position: absolute;
 width: 347px;
 height: 73px;
-left: 931px;
+left: 1000px;
 top: 1404px;
 font-family: 'Inter';
 font-style: normal;
@@ -394,7 +438,7 @@ color: #000000;
 position: absolute;
 width: 347px;
 height: 73px;
-left: 491px;
+left: 675px;
 top: 1477px;
 font-family: 'Inter';
 font-style: normal;
@@ -409,7 +453,7 @@ color: #000000;
 position: absolute;
 width: 347px;
 height: 73px;
-left: 931px;
+left: 1000px;
 top: 1477px;
 font-family: 'Inter';
 font-style: normal;
@@ -424,7 +468,7 @@ color: #000000;
 position: absolute;
 width: 347px;
 height: 73px;
-left: 491px;
+left: 675px;
 top: 1550px;
 font-family: 'Inter';
 font-style: normal;
@@ -438,7 +482,7 @@ color: #000000;
 position: absolute;
 width: 347px;
 height: 73px;
-left: 931px;
+left: 1000px;
 top: 1550px;
 font-family: 'Inter';
 font-style: normal;
@@ -457,6 +501,7 @@ color: #000000;
 .item_7,
 .item_8{
     text-transform: capitalize;
+    margin: 0 auto;
 }
 
 /* ||section 3 / standards*/
@@ -471,7 +516,7 @@ color: #000000;
 width: 6rem;
 height: 100px;
 left: 107px;
-top: 1631px;
+top: 1670px;
 }
 
 /* Trusted by 2M+ Households */
@@ -480,7 +525,7 @@ position: absolute;
 width: 217px;
 height: 94px;
 left: 230px;
-top: 1668px;
+top: 1720px;
 font-family: 'Inter';
 font-style: normal;
 font-weight: 700;
@@ -495,23 +540,21 @@ position: relative;
 width: 82px;
 height: 101px;
 left: 462px;
-top: 1645px;
+top: 1670px;
 }
 
 /* 5 Star Technician Rating */
 .standards_paragraph2{
-    position: absolute;
+position: absolute;
 width: 212px;
 height: 100px;
 left: 660px;
-top: 1669px;
-
+top: 1720px;
 font-family: 'Inter';
 font-style: normal;
 font-weight: 700;
 font-size: 20px;
 line-height: 24px;
-
 color: #000000;
 }
 
@@ -521,7 +564,7 @@ position: relative;
 width: 71px;
 height: 111px;
 left: 784px;
-top: 1634px;
+top: 1670px;
 }
 
   /* Background Checked Technicians */
@@ -530,7 +573,7 @@ top: 1634px;
 width: 225px;
 height: 115px;
 left: 1080px;
-top: 1672px;
+top: 1720px;
 font-family: 'Inter';
 font-style: normal;
 font-weight: 700;
@@ -545,7 +588,7 @@ position: relative;
 width: 105px;
 height: 115px;
 left: 1128px;
-top: 1640px;
+top: 1670px;
 }
 
 /* 90 Day Service Guaranteed */
@@ -554,11 +597,45 @@ top: 1640px;
     width: 225px;
     height: 108px;
     left: 1520px;
-    top: 1661px;
+    top: 1720px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
     font-size: 20px;
     line-height: 24px;
     color: #000000;
+}
+
+
+
+
+
+
+
+
+/* MediasQueries */
+
+/* Extra small devices (phones, 600px and less) */
+@media only screen and (max-width: 600px) {
+
+}
+
+/* Small devices (vertical tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+
+}
+
+/* Medium devices (horizontal tablets, 768px and above) */
+@media only screen and (min-width: 768px) {
+
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+
+}
+
+/* Extra large devices (Large laptops and desktops, 1200px and above) */
+@media only screen and (min-width: 1200px) {
+
 }
