--- a/index.css
+++ b/index.css
@@ -1,6 +1,12 @@
 :root{
+    --Very-dark-blue:hsl(233, 47%, 7%);
+    --Dark-desaturated-blue: hsl(244, 38%, 16%);
+    --Soft-violet: hsl(277, 64%, 61%);
+    --Soft-violets: hsl(277, 64%, 61%);
     --nav-color:#333;
-    --white:#fff
+    --white:#fff;
+    --dark-blue:#0F3460;
+    --light-blue:#017AFF;
 }
 *{
     margin: 0;
@@ -33,6 +39,18 @@ nav{
     
 }
 
+.nav_mobile-menu{
+    width: 50px;
+    height: 50px;
+    fill: #fff;
+}
+
+.nav_mobile-menu:hover{
+    cursor: pointer;
+    transform:translate(-2px,-2px);
+
+
+}
 
 
 
@@ -44,6 +62,9 @@ nav{
 .nav_menu{
     display: inline;
     
+}
+.nav-sub-menu:hover{
+  transform:translate(-2px,-2px);
 }
 
   
@@ -57,13 +78,20 @@ nav{
 }   
 
 .nav_item:hover{
-    color: rgb(130, 130, 249);
+    color: var(--light-blue);
     cursor: pointer;
-    transform:translate(-2px,-2px);}
+}
+
+.nav_mobile-menu{
+    display: hidden;
+}
+
 
 
 /* header img*/
 header{ width: 100%;
+ 
+    
   }
 
 .nav_container{
@@ -76,36 +104,69 @@ header{ width: 100%;
     justify-content: center;
     align-items: center;
     display: flex;
-    flex-direction: column;    
-    
+    flex-direction: column; 
+    position: relative;    
 }
 
+
+
 .header_title{
-    margin:30px;
-    filter: brightness(100%);    
+    
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
     font-size: 60px;
-    line-height: 24px;
+    padding-bottom: 5px;
     text-align: center;
     letter-spacing: -0.011em;
-    color:var(--white);
+    color:#017AFF;
+    
 }
 
 .header_slogan{
-    height: 51px;
-    left: 420px;
-    top: 275px;
     font-family: 'Inter';
     font-style: normal;
-    font-weight: 500;
+    font-weight: 700;
     font-size: 48px;
-    line-height: 30px;
+    padding-bottom: 5px;
     text-align: center;
     letter-spacing: -0.011em;
-    color:var(--white);
+    color:#017AFF;
 }
+
+.nav_button{
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    text-decoration: none;
+    background-image: linear-gradient(to right, #314755 0%, #26a0da  51%, #314755  100%);
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;            
+    box-shadow: 0 0 5px #eee;
+    border-radius: 10px;
+    display: flex;
+    filter: brightness(90%);
+    margin: 10px;
+    padding: 15px 45px;
+    flex-wrap: wrap;
+}
+
+
+.nav_button:hover{
+    background-position: right center; /* change the direction of the change here */
+        color: #fff;
+        text-decoration: none;
+    }
+    a{
+        text-decoration: none;
+    }
+
+    /*SEECTION 1 */
+
+    
+
 
 
             
@@ -127,6 +188,7 @@ header{ width: 100%;
         top: -90px;
 
     }
+    
 
 
 
@@ -136,9 +198,25 @@ header{ width: 100%;
 @media only screen and (min-width: 320px)  {
     .nav_container{
         position: relative;
-        top: -158px;
+        top: -175px;
+    }
+    .header_title{
+        font-size:15px;
+    }
+    .header_slogan{
+        font-size: 18px;
+    }
+
+    .nav_button{ 
+        margin: 2px;
+        padding: 2px 2px;
 
     }
+
+    .nav-sub-menu{
+        display: none;
+    }
+   
 
   
 }
@@ -149,29 +227,110 @@ header{ width: 100%;
     .nav_container{
         position: relative;
         top: -110px;
+    }
+        .header_title{
+            font-size:20px;
+        }
+        .header_slogan{
+            font-size: 20px;
+        }
+    
+        .nav_button{ 
+            margin: 5px;
+            padding: 5px 5px;
+    
+        }
+
+        .nav-sub-menu{
+            display:none;
+        }
+       
 
     }
 
-}
+
 
 /* Medium devices (horizontal tablets, 768px and above) */
 @media only screen and (min-width: 768px) {
    
     .nav_container{
         position: relative;
-        top: -68px;
+        top: -70px;
     }
+    .header_title{
+        font-size:35px;
+    }
+    .header_slogan{
+        font-size: 30px;
+    }
+
+    .nav_button{ 
+        margin: 10px;
+        padding: 10px 10px;
+
+    }
+
+    .nav_mobile-menu{
+        display: none;
+    }
+
+    .nav-sub-menu{
+        display:flex;
+    }
+
+   
+    
 
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px){
+    .header_title{
+        font-size:50px;
+    }
+    .header_slogan{
+        font-size: 45px;
+    }
 
+    .nav_button{ 
+        margin: 10px;
+        padding: 10px 10px;
+
+    }
+    .nav_mobile-menu{
+        display: none;
+    }
+
+    .nav-sub-menu{
+        display:flex;
+    }
+    
 }
    
 
 
 /* Extra large devices (Large laptops and desktops, 1200px and above) */
 @media only screen and (min-width: 1000px){
+    .header_title{
+        font-size:60px;
+    }
+    .header_slogan{
+        font-size: 50px;
+    }
+
+    .nav_button{ 
+        margin: 10px;
+        padding: 10px 10px;
+
+    }
+
+    .nav_mobile-menu{
+        display: none;
+    }
+
+    .nav-sub-menu{
+        display:flex;
+    }
+
 
 }
