--- a/prueva.css
+++ b/prueva.css
@@ -139,7 +139,7 @@ header{ width: 100%;
     background-image: url(./images/header_background.jpeg);
     width: 100vw;
     height:65vh;
-    
+
 .nav_container:{background-image: url(./images/header_background.png);
     width: 100%;
     height:600px;
@@ -258,7 +258,7 @@ header{ width: 100%;
     text-align: center;
 }
 
-.contaner1_title{
+.contaner1_teitl{
     position: absolute;
     width: 25%;
     height: 84px;
@@ -358,7 +358,7 @@ font-style: normal;
 font-weight: 700;
 font-size: 64px;
 line-height: 50px;
-color:black;;
+color:black;
 text-align: center;
 }
 
