--- a/index.css
+++ b/index.css
@@ -126,7 +126,7 @@ header {
 }
 
 .nav_container {
-    background-image: url(./images/header_background.png);
+    background-image: url(./images/waves\ header.png);
     width: 100%;
     height: 600px;
     background-repeat: no-repeat;
@@ -139,6 +139,13 @@ header {
     position: relative;
 }
 
+.header_img{
+    width: 150px;
+    height: 150px;
+    margin-top: 30px;
+    
+
+}
 
 
 .header_title {
@@ -233,6 +240,7 @@ a {
     padding: 20px;
     border-radius: 50px;
     cursor: pointer;
+    
 }
 
 
@@ -283,9 +291,11 @@ figure{
     justify-content: space-evenly;
     display: inline-block;
     padding-left: 30px;
-    margin: 20px;
-    
-    border-radius: 5px;    
+    margin: 25px;
+    border-radius: 5px;   
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.13);
+-moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.13);
+box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.13); 
 }
 
 .card_paragraph{
