--- a/index.css
+++ b/index.css
@@ -438,30 +438,43 @@ box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.13);
 }
 
 /* Small devices (vertical tablets and large phones, 600px and up) */
-@media only screen and (min-width: 320px) {
+@media only screen and (min-width: 317px) {
     .nav_container {
         position: relative;
         top: -175px;
     }
 
     .header_title {
-        font-size: 25px;
+        font-size: 15px;
+
     }
 
     .header_slogan {
-        font-size: 25px;
+        font-size: 15px;
     }
 
     .nav_button {
-        margin: 2px;
-        padding: 2px 2px;
+        margin-top: 0px;
+        padding: 0px 0px;
 
     }
 
     .nav-sub-menu {
         display: none;
     }
+    .header_img {
+       position: relative;
+       top: 1px;
+       width: 50px;
+       height: 50px;
 
+           }
+
+    .container_need-repair{
+        position: relative;
+        top:-200px;
+    
+    }       
 
 
 }
@@ -491,6 +504,19 @@ box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.13);
     .nav-sub-menu {
         display: none;
     }
+
+    .header_img {
+        width: 150px;
+        height: 150px;
+        margin-top: 30px;
+ 
+            }
+
+            .container_need-repair{
+               position: relative;
+               top:25px
+            
+            }  
 
 
 }
@@ -527,6 +553,12 @@ box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.13);
         display: flex;
     }
 
+    .header_img {
+        width: 125px;
+        height: 125px;
+        margin-top: 60px;
+ 
+            }
 
 
 
